[gd_scene load_steps=12 format=3 uid="uid://8bg61c2tpil6"]

[ext_resource type="Script" path="res://Scripts/Enemies/Dasher/DasherMovement.gd" id="1_8cgav"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_tuqdk"]
[ext_resource type="PackedScene" uid="uid://dmkvpjm0t2c10" path="res://Scenes/Enemies/EnemyHitbox.tscn" id="3_6rqae"]
[ext_resource type="PackedScene" uid="uid://cb0lrrs21qk8c" path="res://Scenes/Enemies/EnemyHealthSystem.tscn" id="3_bx21d"]
[ext_resource type="Script" path="res://Scripts/Enemies/Dasher/IdleDasherState.gd" id="3_xoo5o"]
[ext_resource type="Script" path="res://Scripts/Enemies/Dasher/ChaseDasherState.gd" id="4_4h2d7"]
[ext_resource type="Script" path="res://Scripts/Enemies/Dasher/DashDasherState.gd" id="5_7mdq2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixlum"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u42id"]
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7v1qx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk1gu"]

[node name="Dasher" type="CharacterBody2D"]
script = ExtResource("1_8cgav")
value = 3
damage = 4

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ixlum")

[node name="Areas" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/PlayerDetector"]
shape = SubResource("CircleShape2D_u42id")

[node name="EnemyHitbox" parent="Areas" instance=ExtResource("3_6rqae")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/EnemyHitbox"]
shape = SubResource("RectangleShape2D_7v1qx")

[node name="EnemyHealthSystem" parent="Areas" instance=ExtResource("3_bx21d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/EnemyHealthSystem"]
shape = SubResource("RectangleShape2D_bk1gu")

[node name="EnemySprite" type="Sprite2D" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_tuqdk")
CURRENT_STATE = NodePath("IdleDasherState")

[node name="IdleDasherState" type="Node" parent="StateMachine"]
script = ExtResource("3_xoo5o")

[node name="ChaseDasherState" type="Node" parent="StateMachine"]
script = ExtResource("4_4h2d7")

[node name="DashDasherState" type="Node" parent="StateMachine"]
script = ExtResource("5_7mdq2")
speed = null

[connection signal="area_entered" from="Areas/PlayerDetector" to="StateMachine/ChaseDasherState" method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="Areas/PlayerDetector" to="StateMachine/DashDasherState" method="_on_player_detector_area_exited"]
